--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
+    "@egjs/vue-flicking": "^4.7.3",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
-    "gsap": "^3.9.1",
+    "gsap": "npm:@gsap/business@^3.9.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
